--- a/adlib_dbunit_mongo/pom.xml
+++ b/adlib_dbunit_mongo/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.adclear</groupId>
 	<artifactId>adlib_dbunit_mongo</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 
 	<scm>
 		<connection>scm:svn:https://dbunit-mongodb.googlecode.com/svn/adlib_dbunit_mongo/trunk</connection>
