Upload test results to unitcover.

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,9 @@ language: java
 
 before_script:
  - cd adlib_dbunit_mongo
+
+after_failure:
+- wget -O - https://unitcover.herokuapp.com/scripts/upload.sh | bash /dev/stdin pussinboots dbunit-mongodb "."
+
+after_success:
+- wget -O - https://unitcover.herokuapp.com/scripts/upload.sh | bash /dev/stdin pussinboots dbunit-mongodb "."
